マッチング制限時間実装、チャットルームを閉じたとき相手に通知する処理実装

--- a/chat/templates/chat/after_chat.html
+++ b/chat/templates/chat/after_chat.html
@@ -123,7 +123,7 @@
 
   // 初期化
   window.onload = function () {
-    add_input();
+    for (i=0; i<5; i++) {add_input();}
     inputs = document.querySelectorAll('input[type="select"], input[type="text"]');
     inputs[0].focus();
   };
