--- a/chat/templates/chat/anteroom.html
+++ b/chat/templates/chat/anteroom.html
@@ -22,7 +22,6 @@
 <body>
   <div align="center">
     <h1>人物なりきりチャット(仮)</h1>
-    <p>与えられた人物設定になりきって、チャットをしてください。</p>
   </div>
   <hr>
   <div style="margin-left: 10vw">
@@ -49,7 +48,7 @@
        チャットを通じて、<font color="blue">お互いに相手がどんな人物か</font>を知ろうとしてください。<br>
        <b>チャットの際の注意事項</b>が下にありますので、よく読んでください。<br>
     </li>
-    <li>お互いのことを十分知れたと思ったら、チャットを終了してください。</li>
+    <li>お互いにだいたい5項目分、相手のことを知れたと思ったら、チャットを終了してください。</li>
     <li>チャット終了後、<font color="blue">チャット相手の人物設定を予想</font>して記入していただきます。<br>
        また、<font color="blue">与えられた設定以外の設定</font>をチャットで使っていたら、記入してください。<br>
        全て記入し終わったら、送信ボタンを押してください。
@@ -60,7 +59,7 @@
       <li>チャット相手は、ロボットではなく人間です。
           <font color="red">攻撃的・差別的な言葉、過度なスラングの使用</font>などは控えてください。</li>
       <li>「お互いに初対面」としての会話をしてください。あいさつや自己紹介から始めましょう。</li>
-      <li>お互いにだいたい5項目分、相手のことを知れたと思ったら、対話を終了してください。</li>
+      <li>お互いにだいたい5項目分、相手のことを知れたと思ったら、チャットを終了してください。</li>
       <li><font color="blue">与えられた人物設定以外の項目は、自由に連想</font>して話してください。<br>
           例えば、あなたの人物設定に「年齢」という項目がなく、相手に年齢を聞かれた時は、何歳と答えても構いません。</li>
       <li>与えられた設定の5項目全てを無理に伝える必要はありません。自然な会話を心がけてください。</li>
