--- a/chat/templates/chat/thanks.html
+++ b/chat/templates/chat/thanks.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <p>ありがとうございました。</p>
-  <p>ページを閉じて、クラウドソーシングサービスでの手続きを行ってください。</p>
+  <p>あなたの確認コードは、 <br>{{verifycode}}<br> です。</p>
+  <p>クラウドソーシングサービスに戻り、確認コードを入力してください。</p>
 </body>
 </html>
