--- a/chat/templates/chat/top.html
+++ b/chat/templates/chat/top.html
@@ -30,7 +30,7 @@
     <div><img src="{% static 'chat/スライド11.JPG' %}" width="80%"></div>
     <div><img src="{% static 'chat/スライド12.JPG' %}" width="80%"></div>
   </div>
-  <p><a href="{% url 'anteroom' %}">説明を終了し、次のページへ進む</a></p>
+  <p><a href="{% url 'anteroom' %}" target="_blank">説明を終了し、次のページへ進む</a></p>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="{% static 'chat/slick.min.js'%}"></script>
   <script type="text/javascript">
