ワーカーへの伝達項目を追加

--- a/chat/templates/chat/after_chat.html
+++ b/chat/templates/chat/after_chat.html
@@ -61,6 +61,7 @@
         チャット中に使った、あなたの元々の人物設定にはない設定を記入してください。<br>
         例えば、「年齢」という項目がないのに「18歳です」と発言した場合、項目に「年齢」、値に「18」を記入してください。<br>
         項目の欄は選択肢が出ますが、選択肢以外にも自由に記入して構いません。<br>
+        <b>追加人物設定の収集は本タスクの重要な目的ですので、より丁寧な作業をお願いいたします。</b><br>
         <font size="-1">※現在、「欄を追加」ボタンを押すと記入したものが消えてしまうので、先に十分な数の欄を作ってからご記入ください。</font>
       </p>
       <table id="sup-persona-table">
