change the title of the anteroom

--- a/chat/templates/chat/anteroom.html
+++ b/chat/templates/chat/anteroom.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>人物なりきりチャット</h1>
+    <h1>人物なりきりチャット おみあいばーじょん</h1>
   </div>
   <hr>
   <div style="margin-left: 10vw">
